// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline Card media > should match the snapshot ( IMAGE ) 1`] = `
<div>
  <div
    class="sc-bRKDuR eGMDB card-media-wrapper"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-hvigdm iEEmax"
      height="200"
    >
      <img
        alt="Image"
        class="sc-fhHczv kywTIv"
        data-testid="timeline-card-content-image"
        height="auto"
        loading="lazy"
        mode="VERTICAL_ALTERNATING"
        src="https://picsum.photos/200/300"
        width="100%"
      />
    </div>
  </div>
  <div
    class="sc-dTvVRJ bXyjTr"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-hwkwBN bqxVgB"
    />
    <span
      class="sc-dntSTA cgZpjZ card-sub-title"
    >
      This is another test
    </span>
  </div>
</div>
`;

exports[`Timeline Card media > should match the snapshot ( VIDEO ) 1`] = `
<div>
  <div
    class="sc-bRKDuR eGMDB card-media-wrapper"
    mode="VERTICAL_ALTERNATING"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
      allowfullscreen=""
      class="sc-hjsuWn bxMWPl"
      data-testid="timeline-card-content-video"
      loading="lazy"
      src="https://www.youtube.com/watch?v=9bZkp7q19f0?enablejsapi=1"
      title="Video"
    />
  </div>
  <div
    class="sc-dTvVRJ bXyjTr"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-hwkwBN bqxVgB"
    />
    <span
      class="sc-dntSTA cgZpjZ card-sub-title"
    >
      This is another test
    </span>
  </div>
</div>
`;
